--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,14 @@ code {
   margin: 40vh;
   font-size: 1.25em;
 }
+
+.page {
+  margin: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.test {
+  text-align: center;
+}
